--- a/Streetwear's evolution.css
+++ b/Streetwear's evolution.css
@@ -95,12 +95,12 @@
   float: right;
   position:relative;
 }
-/* The flip card container */
+/* The flip card container for Hip-Hop*/
 .Hip-hop{
   background-color: transparent;
-  width: 304px;
-  height: 304px;
-  border: 2px solid black;
+  width: 300px;
+  height: 300px;
+  border: 2px solid #C4C4C4;
   perspective: 1000px; /* Gives the 3D effect */
 }
 /* helps position the front and back of the flip card */
@@ -136,208 +136,46 @@
   transform: rotateY(180deg);
   font-family: "work sans";
 }
-/* The flip card container */
-.Hip-hop{
+/* The flip card container for skating*/
+.skating{
   background-color: transparent;
-  width: 304px;
-  height: 304px;
-  border: 2px solid black;
+  width: 300px;
+  height: 325px;
+  border: 2px solid #C4C4C4;
   perspective: 1000px; /* Gives the 3D effect */
 }
 /* helps position the front and back of the flip card */
-.Hip-hop-inner {
+.skating-inner {
   position: relative;
   width: 300px;
-  height: 300px;
+  height: 325px;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
 /* horizontal flip when mouse hovers over the card */
-.Hip-hop:hover .Hip-hop-inner{
+.skating:hover .skating-inner{
   transform: rotateY(180deg);
 }
 /* Position the front and back of card */
-.Hip-hop-front, .Hip-hop-back{
+.skating-front, .skating-back{
   position: absolute;
   width: 300px;
-  height: 300px;
+  height: 325px;
   -webkit-backface-visibility: hidden; /* needed fot Safari */
   backface-visibility: hidden;
 }
 /* Styles the front of the card*/
-.Hip-hop-front{
-  background-color: white;
+.skating-front{
   color: black;
 }
 /* Styles the back of the card */
-.Hip-hop-back{
+.skating-back{
   background-color:#611CA9;
   color:black;
   transform: rotateY(180deg);
-  font-family: "work sans";
+  font-family: 'work sans';
 }
-/* The flip card container */
-.Hip-hop{
-  background-color: transparent;
-  width: 304px;
-  height: 304px;
-  border: 2px solid black;
-  perspective: 1000px; /* Gives the 3D effect */
-}
-/* helps position the front and back of the flip card */
-.Hip-hop-inner {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-/* horizontal flip when mouse hovers over the card */
-.Hip-hop:hover .Hip-hop-inner{
-  transform: rotateY(180deg);
-}
-/* Position the front and back of card */
-.Hip-hop-front, .Hip-hop-back{
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  -webkit-backface-visibility: hidden; /* needed fot Safari */
-  backface-visibility: hidden;
-}
-/* Styles the front of the card*/
-.Hip-hop-front{
-  background-color: white;
-  color: black;
-}
-/* Styles the back of the card */
-.Hip-hop-back{
-  background-color:#611CA9;
-  color:black;
-  transform: rotateY(180deg);
-  font-family: "work sans";
-}
-/* The flip card container */
-.Hip-hop{
-  background-color: transparent;
-  width: 304px;
-  height: 304px;
-  border: 2px solid black;
-  perspective: 1000px; /* Gives the 3D effect */
-}
-/* helps position the front and back of the flip card */
-.Hip-hop-inner {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-/* horizontal flip when mouse hovers over the card */
-.Hip-hop:hover .Hip-hop-inner{
-  transform: rotateY(180deg);
-}
-/* Position the front and back of card */
-.Hip-hop-front, .Hip-hop-back{
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  -webkit-backface-visibility: hidden; /* needed fot Safari */
-  backface-visibility: hidden;
-}
-/* Styles the front of the card*/
-.Hip-hop-front{
-  background-color: white;
-  color: black;
-}
-/* Styles the back of the card */
-.Hip-hop-back{
-  background-color:#611CA9;
-  color:black;
-  transform: rotateY(180deg);
-  font-family: "work sans";
-}/* The flip card container */
-.Hip-hop{
-  background-color: transparent;
-  width: 304px;
-  height: 304px;
-  border: 2px solid black;
-  perspective: 1000px; /* Gives the 3D effect */
-}
-/* helps position the front and back of the flip card */
-.Hip-hop-inner {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-/* horizontal flip when mouse hovers over the card */
-.Hip-hop:hover .Hip-hop-inner{
-  transform: rotateY(180deg);
-}
-/* Position the front and back of card */
-.Hip-hop-front, .Hip-hop-back{
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  -webkit-backface-visibility: hidden; /* needed fot Safari */
-  backface-visibility: hidden;
-}
-/* Styles the front of the card*/
-.Hip-hop-front{
-  background-color: white;
-  color: black;
-}
-/* Styles the back of the card */
-.Hip-hop-back{
-  background-color:#611CA9;
-  color:black;
-  transform: rotateY(180deg);
-  font-family: "work sans";
-}
-/* The flip card container */
-.Hip-hop{
-  background-color: transparent;
-  width: 304px;
-  height: 304px;
-  border: 2px solid black;
-  perspective: 1000px; /* Gives the 3D effect */
-}
-/* helps position the front and back of the flip card */
-.Hip-hop-inner {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-/* horizontal flip when mouse hovers over the card */
-.Hip-hop:hover .Hip-hop-inner{
-  transform: rotateY(180deg);
-}
-/* Position the front and back of card */
-.Hip-hop-front, .Hip-hop-back{
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  -webkit-backface-visibility: hidden; /* needed fot Safari */
-  backface-visibility: hidden;
-}
-/* Styles the front of the card*/
-.Hip-hop-front{
-  background-color: white;
-  color: black;
-}
-/* Styles the back of the card */
-.Hip-hop-back{
-  background-color:#611CA9;
-  color:black;
-  transform: rotateY(180deg);
-  font-family: "work sans";
-}
+
+
 
